SOE-3276: Banner overlay: button in wysiwyg not responsive scaling codeclimate fixes

--- a/css/soe_helper.css
+++ b/css/soe_helper.css
@@ -2075,23 +2075,23 @@ body:not(.page-admin) .sidebar .views-exposed-form .views-exposed-widget .form-s
     .row-fluid .block-bean.span12 {
       margin-left: 0; } }
 /* line 104, ../scss/components/_soe_beans.scss */
+.row-fluid .block-bean.key-image-no-padding.well {
+  padding: 0; }
+  /* line 107, ../scss/components/_soe_beans.scss */
+  .row-fluid .block-bean.key-image-no-padding.well h2 {
+    margin-top: 1.1em; }
+  /* line 111, ../scss/components/_soe_beans.scss */
+  .row-fluid .block-bean.key-image-no-padding.well .field-name-field-s-image-image img {
+    width: 100%; }
+  /* line 115, ../scss/components/_soe_beans.scss */
+  .row-fluid .block-bean.key-image-no-padding.well .postcard-content {
+    padding: 2em; }
+/* line 120, ../scss/components/_soe_beans.scss */
+.row-fluid .block-bean.center-title.well .group-s-postcard-content .group-s-title-container {
+  text-align: center; }
+/* line 124, ../scss/components/_soe_beans.scss */
 .row-fluid .block-bean.well {
   padding: 2em; }
-  /* line 107, ../scss/components/_soe_beans.scss */
-  .row-fluid .block-bean.well.center-title .group-s-postcard-content .group-s-title-container {
-    text-align: center; }
-  /* line 111, ../scss/components/_soe_beans.scss */
-  .row-fluid .block-bean.well.key-image-no-padding {
-    padding: 0; }
-    /* line 114, ../scss/components/_soe_beans.scss */
-    .row-fluid .block-bean.well.key-image-no-padding h2 {
-      margin-top: 1.1em; }
-  /* line 119, ../scss/components/_soe_beans.scss */
-  .row-fluid .block-bean.well.key-image-no-padding .field-name-field-s-image-image img {
-    width: 100%; }
-  /* line 123, ../scss/components/_soe_beans.scss */
-  .row-fluid .block-bean.well.key-image-no-padding .postcard-content {
-    padding: 2em; }
   /* line 127, ../scss/components/_soe_beans.scss */
   .row-fluid .block-bean.well .bean-stanford-postcard .field-name-field-s-postcard-body h2:last-child,
   .row-fluid .block-bean.well .bean-stanford-postcard .field-name-field-s-postcard-body h3:last-child,
