--- a/scss/components/_soe_beans.scss
+++ b/scss/components/_soe_beans.scss
@@ -101,28 +101,28 @@
     }
   }
 
-  &.well {
-    padding: 2em;
+  &.key-image-no-padding.well {
+    padding: 0;
 
-    &.center-title .group-s-postcard-content .group-s-title-container {
-      text-align: center;
+    h2 {
+        margin-top: 1.1em;
     }
 
-    &.key-image-no-padding {
-      padding: 0;
-
-      h2 {
-          margin-top: 1.1em;
-      }
-    }
-
-    &.key-image-no-padding .field-name-field-s-image-image img {
+    .field-name-field-s-image-image img {
         width: 100%;
     }
 
-    &.key-image-no-padding .postcard-content {
+    .postcard-content {
         padding: 2em;
     }
+  }
+
+  &.center-title.well .group-s-postcard-content .group-s-title-container {
+    text-align: center;
+  }
+
+  &.well {
+    padding: 2em;
 
     .bean-stanford-postcard .field-name-field-s-postcard-body h2:last-child,
     .bean-stanford-postcard .field-name-field-s-postcard-body h3:last-child,
